# ip_market

src/ip_market_backend/: Cargo.toml  ip_market_backend.did
src/ip_market_backend/src/: lib.rs
src/ip_market_frontend/src/: App.jsx  main.jsx
src/ip_market_frontend/src/components/: Dashboard.jsx  ProtectedRoute.jsx  RegisterIP.jsx
src/ip_market_frontend/src/components/auth/: InternetIndenityAuth.jsx
src/ip_market_frontend/src/pages/: Login.jsx  Register.jsx
