[package]
name = "ip_market_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.6.10"
candid = "0.8.4"
serde = { version = "1.0", features = ["derive"] }


[dependencies.getrandom]
version = "0.2"
features = ["custom"]

# For testing
[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# Optimize for size in release builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package.ic-wasm]
opt-level = 2
